# actuallyabot

./: .env.example  .gitignore  README.md  pyproject.toml  run_obs_twitch_lightcone.py  stream_lightcone_screencast.py
commentary-sidecar/: README.md  sidecar.py
src/actuallyabot/: actions.py  dom.py  events.py  loop.py  main.py  orchestrator.py  session.py
src/actuallyabot/games/: base.py  checkers_custom.py  placeholder.py
src/commentary-sidecar/: .env.example  README.md  sidecar.py
src/streambot/: __init__.py  controller.py  event_server.py  lightcone_obs.py  obsws.py  run_checkers_youtube.py  run_youtube_stream.py
