[project]
name = "actuallyabot"
version = "0.1.0"
description = "Northstar agent that plays games inside a Kernel browser. Player half of an AI-streamer system."
requires-python = ">=3.11"
dependencies = [
    "kernel",
    "tzafon",
    "httpx",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[project.scripts]
actuallyabot = "actuallyabot.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/actuallyabot"]
